2023-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (dired-advertise, dired-unadvertise): Declare.
	(tramp-dired-buffer-p, tramp-remote-process-p): Rename.
	(tramp-file-name-with-method): New defcustom.
	(tramp-file-name-with-sudo, tramp-revert-buffer-with-sudo): New defuns.

2023-09-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-perl-file-name-all-completions): Fix Perl
	script.  (Bug#65744)

2023-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-completion-methods): Make MULTI-HOP optional.

2023-09-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Fix :type.
	Add ;;;###tramp-autoload cookie.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add methods properly.

2023-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Adapt docstring.
	Use nil as initial value.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add "docker" and "podman".

2023-08-31  Gene Goykhman  <gene@indigo1.com>

	* tramp.el: Add custom variable `tramp-container-multi-hop-methods'.

	* tramp-container.el: Check if METHOD is a member of
	`tramp-container-multi-hop-methods' before attempting completion.

2023-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp--last-hop-directory): Adapt docstring.  Move down.
	(tramp-set-completion-function): Revert default case to
	`file-exists-p', the workaround isn't needed anymore.
	(tramp-get-completion-methods): Rename argument to MULTI-HOP.
	(tramp-completion-remote-containers): Add :version.
	(tramp-multi-hop-p): Bind `tramp-verbose' to nil.
	(tramp-accept-process-output): Use `with-tramp-suspended-timers'
	also for the other processes.

	* tramp-container.el (tramp-container--completion-function):
	Use METHOD as argument, instead of PROGRAM.  Determine program
	from METHOD entry in `tramp-methods'.  Bind `non-essential' to